# asset_registry

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  flake.nix
contrib/: docker-entrypoint.sh  hook.sh  nginx.conf  onion.Dockerfile  torrc  update-json-index.sh
contrib/register-webpage/: build.sh  npm-shrinkwrap.json  package.json  register.html  register.pug  script.js
doc/: cli.md  specs.md
src/: asset.rs  chain.rs  client.rs  entity.rs  errors.rs  lib.rs  registry.rs  server.rs  types.rs  util.rs
test/: asset-38dac0.json  asset-455a7a.json  asset-b1405e.json  asset-cdcc51.json  asset-committed.json  asset-signed.json  asset.json  committed-issuance-tx.hex  issuance-tx-4ca2a6.hex  issuance-tx-669d13.hex  issuance-tx-cda700.hex  signed-issuance-tx.hex
test/db/: asset.json
