[package]
name = "asset_registry"
version = "0.1.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
edition = "2018"

[features]
default = [ "cli", "client" ]
dev = []
client = []
server = [ "hyper" ]
cli = [ "structopt" ]

[dependencies]
bitcoin = { git = "https://github.com/shesek/rust-bitcoin", rev = "edge" , features = [ "serde" ] }
elements = { git = "https://github.com/shesek/rust-elements", rev = "edge", features = [ "serde" ]  }
bitcoin_hashes = { git = "https://github.com/stevenroose/bitcoin_hashes", rev = "29053f647eb9c587cd87b34be38b0050ff26a7af", features = [ "serde" ] }
hyper = { version = "0.12.28", optional = true }
failure = "0.1.5"
hex = "0.3.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
log = "0.4.5"
stderrlog = "0.4.1"
secp256k1 = "0.12.2"
base64 = "0.10.1"
reqwest = "0.9.15"
lazy_static = "1.3.0"
idna = "0.1.5"
regex = "1.1.6"
structopt = { version = "0.2.15", optional = true }

[dev-dependencies]
rocket = "0.4.0"
rocket_contrib = { version = "0.4.0", default-features = false, features = ["json"] }

[[bin]]
name = "server"
required-features = [ "cli", "server" ]

[[bin]]
name = "liquid-asset-registry"
required-features = [ "cli" ]
