[package]
name = "asset_registry"
version = "0.1.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
edition = "2018"

[features]
default = [ "cli", "client" ]
dev = []
client = []
server = [ "hyper" ]
cli = [ "structopt" ]

[dependencies]
bitcoin = { version = "0.23.0", features = [ "use-serde" ] }
elements = { version = "0.12.1", features = [ "serde-feature" ]  }
bitcoin_hashes = { version = "0.7.4", features = [ "serde" ] }
hyper = { version = "0.12.35", optional = true }
failure = "0.1.7"
hex = "0.4.2"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
log = "0.4.8"
stderrlog = "0.4.3"
secp256k1 = "0.17.2"
base64 = "0.12.0"
reqwest = { version = "0.10.4", features = [ "blocking", "json" ] }
lazy_static = "1.4.0"
idna = "0.2.0"
regex = "1.1.6"
structopt = { version = "0.3.12", optional = true }
trust-dns-resolver = "0.20.3"

[dev-dependencies]
rocket = "0.4.4"
rocket_contrib = { version = "0.4.4", default-features = false, features = ["json"] }

[[bin]]
name = "server"
required-features = [ "cli", "server" ]

[[bin]]
name = "liquid-asset-registry"
required-features = [ "cli" ]

[patch.crates-io.elements]
git = "https://github.com/elementsproject/rust-elements"
rev = "fc27e53046d531b5ea65617fbfeea62e84ba10d4"
