[package]
name = "asset_registry"
version = "0.1.0"
authors = ["Nadav Ivgi <nadav@shesek.info>"]
edition = "2018"

[features]
default = [ "cli", "client" ]
dev = []
client = []
server = [ "hyper" ]
cli = [ "structopt" ]

[dependencies]
bitcoin = { version = "0.31", features = [ "serde" ] }
elements = { version = "0.24", features = [ "serde" ]  }
hyper = { version = "0.12", optional = true }
failure = "0.1.7"
serde = "1.0.105"
serde_derive = "1.0.105"
serde_json = "1.0.50"
log = "0.4.8"
stderrlog = "0.4.3"
base64 = "0.12.0"
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
lazy_static = "1.4.0"
idna = "0.3"
regex = "1"
structopt = { version = "0.3.12", optional = true }

[dev-dependencies]
rocket = { version = "0.5", features = ["json"] }

[[bin]]
name = "server"
required-features = [ "cli", "server" ]

[[bin]]
name = "liquid-asset-registry"
required-features = [ "cli" ]
